Update de function lastEtape